--- a/LovFoodAdmin/Base.lproj/Main.storyboard
+++ b/LovFoodAdmin/Base.lproj/Main.storyboard
@@ -34,25 +34,25 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cC-x6-2gt">
-                                            <rect key="frame" x="550" y="8" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CmR-dU-QKH">
+                                            <rect key="frame" x="18" y="59" width="35.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CmR-dU-QKH">
-                                            <rect key="frame" x="18" y="59.5" width="35.5" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cC-x6-2gt">
+                                            <rect key="frame" x="540" y="8" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="8cC-x6-2gt" firstAttribute="top" secondItem="azT-eY-4S9" secondAttribute="topMargin" id="44B-FU-t3l"/>
                                         <constraint firstItem="9tP-A3-Rxz" firstAttribute="leading" secondItem="azT-eY-4S9" secondAttribute="leadingMargin" constant="10" id="5QG-Bg-jct"/>
                                         <constraint firstItem="9tP-A3-Rxz" firstAttribute="top" secondItem="azT-eY-4S9" secondAttribute="topMargin" id="7Me-1w-Z85"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="8cC-x6-2gt" secondAttribute="trailing" constant="10" id="7wC-hY-SgR"/>
                                         <constraint firstItem="CmR-dU-QKH" firstAttribute="top" secondItem="hz1-k6-Ijp" secondAttribute="bottom" constant="8" id="Chk-ik-p2m"/>
-                                        <constraint firstItem="8cC-x6-2gt" firstAttribute="trailing" secondItem="azT-eY-4S9" secondAttribute="trailingMargin" id="QNt-0q-4s3"/>
+                                        <constraint firstItem="8cC-x6-2gt" firstAttribute="centerY" secondItem="9tP-A3-Rxz" secondAttribute="centerY" id="LbU-Ux-kTg"/>
                                         <constraint firstItem="hz1-k6-Ijp" firstAttribute="top" secondItem="9tP-A3-Rxz" secondAttribute="bottom" constant="8" id="h9t-d8-dV3"/>
                                         <constraint firstItem="hz1-k6-Ijp" firstAttribute="leading" secondItem="azT-eY-4S9" secondAttribute="leadingMargin" constant="10" id="jOM-Wt-H91"/>
                                         <constraint firstItem="CmR-dU-QKH" firstAttribute="leading" secondItem="azT-eY-4S9" secondAttribute="leadingMargin" constant="10" id="mBn-I9-y1e"/>
@@ -108,25 +108,59 @@
                                     <outletCollection property="gestureRecognizers" destination="rOV-w6-gVj" appends="YES" id="1fZ-6z-qil"/>
                                 </connections>
                             </imageView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CJc-Ma-8l5">
+                                <rect key="frame" x="225" y="428" width="150" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="yVw-Iy-mTl"/>
+                                </constraints>
+                            </progressView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kw2-gj-fP0">
+                                <rect key="frame" x="225" y="491" width="150" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="zsj-dm-wDS"/>
+                                </constraints>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="thumbnail of Image:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cyp-lO-myZ">
+                                <rect key="frame" x="224" y="460" width="152" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="full image:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sqn-fl-wC9">
+                                <rect key="frame" x="260.5" y="397" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Cyp-lO-myZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="A5z-9I-3W8"/>
                             <constraint firstItem="4vW-jt-tm9" firstAttribute="top" secondItem="7Nx-HI-ceV" secondAttribute="bottom" constant="30" id="GAe-hP-Bie"/>
+                            <constraint firstItem="Cyp-lO-myZ" firstAttribute="top" secondItem="CJc-Ma-8l5" secondAttribute="bottom" constant="30" id="IDh-lS-CK0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7Nx-HI-ceV" secondAttribute="trailing" constant="-20" id="KaC-0x-eMm"/>
                             <constraint firstItem="4vW-jt-tm9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ozd-d4-b1x"/>
+                            <constraint firstItem="CJc-Ma-8l5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vfk-se-EQo"/>
+                            <constraint firstItem="kw2-gj-fP0" firstAttribute="top" secondItem="Cyp-lO-myZ" secondAttribute="bottom" constant="10" id="Vwe-5e-IC8"/>
+                            <constraint firstItem="sqn-fl-wC9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fQY-M7-yJF"/>
+                            <constraint firstItem="sqn-fl-wC9" firstAttribute="top" secondItem="4vW-jt-tm9" secondAttribute="bottom" constant="20" id="hCV-hQ-lE3"/>
                             <constraint firstItem="7Nx-HI-ceV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="i3t-Q6-zvQ"/>
+                            <constraint firstItem="CJc-Ma-8l5" firstAttribute="top" secondItem="sqn-fl-wC9" secondAttribute="bottom" constant="10" id="qUh-Xk-JPP"/>
                             <constraint firstItem="7Nx-HI-ceV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="64" id="tOU-eF-Syw"/>
+                            <constraint firstItem="kw2-gj-fP0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xBc-za-dlL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fAi-Th-n8q">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Kzc-XQ-Ylb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Kzc-XQ-Ylb">
                             <connections>
                                 <segue destination="jOf-n0-QOL" kind="unwind" unwindAction="backFromUploadImage:" id="cJU-g6-o3r"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="fullImageProgessBar" destination="CJc-Ma-8l5" id="zAg-5e-dz3"/>
                         <outlet property="imageView" destination="7Nx-HI-ceV" id="9jO-sT-bvs"/>
+                        <outlet property="thumbImageProgessBar" destination="kw2-gj-fP0" id="9az-F0-DXR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
